--- a/src/app/components/store/cart/cart.component.html
+++ b/src/app/components/store/cart/cart.component.html
@@ -37,7 +37,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 col-lg-7">
-        <div class="grid-box-shadow OTP">
+        <div *ngIf="oneTimePriceCartItemsCount > 0" class="grid-box-shadow OTP">
           <h3>One-Time Purchase ({{ oneTimePriceCartItemsCount }})</h3>
           <div
             *ngFor="let cartItem of oneTimePriceCartItems; let i = index"
@@ -149,7 +149,7 @@
             </div>
           </div>
         </div>
-        <div class="grid-box-shadow OTP mt-3 Subscription-box">
+        <div *ngIf="subscriptionCartItemsCount > 0" class="grid-box-shadow OTP mt-3 Subscription-box">
           <h3>Subscription Purchase ({{ subscriptionCartItemsCount }})</h3>
           <div
             *ngFor="let delivery of subscriptionCartItems; let i = index"
