--- a/src/app/components/store/shop/shop.component.css
+++ b/src/app/components/store/shop/shop.component.css
@@ -364,15 +364,23 @@ a.btn-add:hover {
 }
 
 .content18plus .btn-same18 button {
-  background-color: #000;
-  max-width: 114px;
-  display: block;
-  width: 100%;
-  font-family: 'g-demibold';
-  font-size: 18px;
+  background-color: #1cb1c5;
   color: #fff;
-  line-height: 20px;
-  padding: 9px 9px;
+  font-size: 17px;
+  padding: 6px 40px;
+  text-transform: uppercase;
+  border-radius: 30px;
+
+}
+.content18plus .btn-same18 button.btn-no {
+  background: transparent !important;
+  border: 1px solid #1cb1c5;
+  color: #1cb1c5 !important;
+}
+.content18plus .btn-same18 button.btn-no:hover
+{
+  background-color: #1cb1c5 !important;
+  color: #fff !important;
 }
 
 .content18plus .btn-same18 button.btn-yes {
