--- a/src/app/components/layout/app-footer/app-footer.component.html
+++ b/src/app/components/layout/app-footer/app-footer.component.html
@@ -47,10 +47,10 @@
               <p class="footer-logo"><a href="#"><img src="../../assets/footer-logo.png"/></a></p>
               <p class="copyright">© 2021 Wink Naturals All rights reserved</p>
               <ul class="bottom-footer-links">
-                  <li><a href="#">Terms & Conditions</a></li>
+                  <li><a href="https://s3-us-west-2.amazonaws.com/seller-assets/Compensation+Plan/Graphics/Member+Policy+Manual.pdf" target="_blank">Terms & Conditions</a></li>
                   <li>
                       <ul>
-                          <li><a href="#">Compensation Plan</a></li>
+                          <li><a href="https://s3-us-west-2.amazonaws.com/seller-assets/Compensation+Plan/Graphics/Compensation+Plan+Overview.pdf" target="_blank">Compensation Plan</a></li>
                           <li><a href="#">Usage Policy</a></li>
                       </ul>
                   </li>
