--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -287,7 +287,7 @@
             <div class="col-sm-12 col-md-12 col-lg-7 col-lg-pull-5">
                 <div class="checkout-steps-3">
 
-                    <ngb-accordion [closeOthers]="false" activeIds="checkoutstep1" class="panel-stepbar">
+                    <ngb-accordion [closeOthers]="false" activeIds="checkoutstep1" class="panel-stepbar" (panelChange)="toggleAccordian($event)">
 
                         <ngb-panel [disabled]="showPanel1 ? true:null" id="checkoutstep1">
 
@@ -367,7 +367,7 @@
                                             <ng-template ngbPanelTitle>
                                                 <div class="heading-step1">
                                                     <h4>Shipping Address</h4>
-                                                    <p> {{DisplayAddress}} …</p>
+                                                    <p> {{DisplayAddress?DisplayAddress:''}} …</p>
                                                     <span class="arrow-stepp">
                                                         <svg xmlns="http://www.w3.org/2000/svg" width="6.6"
                                                             height="11.2" viewBox="0 0 6.6 11.2">
@@ -558,7 +558,7 @@
                                 </ngb-accordion>
                                 <!-- Save Button For Shipping Address -->
                                 <div class="saveprocessed">
-                                    <button type="submit" (click)="onAddressSubmit()" >Save & Continue</button>
+                                    <button type="submit" (click)="onAddressSubmit()">Save & Continue</button>
                                 </div>
                             </ng-template>
                         </ngb-panel>
