--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -912,7 +912,7 @@
                                                                         <div class="form-group">
                                                                             <input type="text"
                                                                             formControlName="newCountry"
-                                                                                placeholder="newCountry"
+                                                                                placeholder="newCountry" mnn
                                                                                 name="newCountry"
                                                                                 class="form-control" />
                                                                         </div>
