--- a/src/app/components/store/cart/cart.component.html
+++ b/src/app/components/store/cart/cart.component.html
@@ -514,7 +514,7 @@
         </div>
 
         <!--- GET FREE SHipping BOX-->
-        <div class="grid-box-shadow">
+        <div class="grid-box-shadow shipp">
           <div class="get-shipping">
             <a (click)="open(convert_subscription)"
               >Get Free Shipping & Save 15%
@@ -823,11 +823,12 @@
         </p>
         <div class="content-learnmore" *ngIf="data_learn">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-            laboriosam sunt nulla inventore quas consequuntur eos quibusdam quam
-            aut est, nam ex dolorem magnam quidem quae, error reiciendis?
-            Doloremque, quas?
-          </p>
+            Here’s how it works: </p>
+          <p> - Schedule your deliveries however you see fit. It is completely customizable.</p>
+          <p> - Do you need to skip a shipment or adjust your next shipment date? Just edit your recurring order in your account or give us a call.<p>
+          <p> - You get FREE 1st Class Shipping & 15% off every order.</p>
+          <p> - Setting up your Preferred Subscription Account automatically lets you start earning rewards. Earn up to 20% of your order value each month in store credit paid out in Loyalty Points directly into your account just for having an active subscription.</p>
+         
         </div>
       </div>
       <div class="cart-singleitem">
@@ -1034,7 +1035,7 @@
         </div>
         <div class="btn btn-subsc">
           <button type="submit" class="btn btn-subsc-active">
-            Activte My Subscription
+            Activate My Subscription
           </button>
         </div>
       </div>
