--- a/src/app/components/home/enrollment/enrollment-info/enrollment-info.component.css
+++ b/src/app/components/home/enrollment/enrollment-info/enrollment-info.component.css
@@ -202,3 +202,6 @@ ul.list-items li:after {
 .enroll-member form.member-search input:focus {
     outline: none;
 }
+.content-video-enrollment iframe.wistia_embed {
+    width: 100%;
+    }
