--- a/src/app/components/auth/sign-up/sign-up.component.css
+++ b/src/app/components/auth/sign-up/sign-up.component.css
@@ -15,6 +15,25 @@ section.form-sign-up form .signup-box-wrapper {
     margin-bottom: 30px;
 }
 
+span.valid-text {
+    font-family: 'g-regular';
+    font-size: 13px;
+    position: absolute;
+    bottom: -22px;
+}
+
+.signup-box-wrapper .form-group {
+    margin-bottom: 28px !important;
+    position: relative;
+}
+
+section.form-sign-up form.ng-invalid input.is-invalid+span.valid-text {
+    display: none;
+}
+
+section.form-sign-up form.ng-invalid.ng-submitted .form-group.mb-3 {
+    margin-bottom: 8px !important;
+}
 
 .signup-box-wrapper h3 {
     font-family: 'g-regular';
